--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,18 @@ header {
     font-weight: 500;
     font-size: 24px;
 }
+
+footer {
+    width: 100%;
+    height: 209px;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.logofooter {
+    width: 8%;
+    margin: 40px;
+}
