--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+/* Composants Header et Footer */
+
 header {
     width: 86%;
     margin: 0 auto;
@@ -37,3 +40,45 @@ footer {
     width: 8%;
     margin: 40px;
 }
+
+
+/* Composant bannière */
+
+.bannierecontainer {
+    position: relative;
+    width: 86%;
+    height: 223px;
+    margin: 30px auto;
+    border-radius: 25px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.6);
+}
+
+.banniere {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    z-index: 0;
+}
+
+.bannierehome {
+    background-image: url(/public/images/banniere1.png);
+    filter: brightness(40%);
+}
+
+.titrebanniere {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 48px;
+    color: white;
+    position: relative;
+    z-index: 1;
+    width: 60%;
+    text-wrap: nowrap;
+}
+
