--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ footer {
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    margin-top: 35px;
 }
 .logofooter {
     width: 8%;
@@ -105,6 +106,7 @@ a {
     margin: 0 auto;
     gap: 20px;
     padding-top: 25px;
+    padding-bottom: 25px;
 }
 .card {
     padding-top: 15px;
