--- a/src/App.css
+++ b/src/App.css
@@ -136,12 +136,13 @@ a {
 .containerCollapse {
     width: 71%;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 .objetsCollapse {
     background-color: #FF6060;
-    border-radius: 5px;
-    
+    border-radius: 5px 5px 5px 5px;
+    cursor: pointer;
 }
 
 .titleCollapse {
@@ -149,9 +150,20 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 20px;
+    margin-bottom: 0;
     height: 52px;
 }
 
 .contentCollapse {
     background-color: white;
+    font-weight: 400;
+    font-size: 18px;
+    padding-left: 10px;
+    margin-top: 0;
+}
+
+.iconeCollapse {
+    font-weight: 800;
+    margin-right: 30px;
 }
