--- a/src/App.css
+++ b/src/App.css
@@ -166,4 +166,12 @@ a {
 .iconeCollapse {
     font-weight: 800;
     margin-right: 30px;
+    font-size: 40px;
+    transition: transform 0.5s ease;
 }
+
+.rotate {
+    transform: rotate(-180deg);
+}
+
+
