--- a/src/App.css
+++ b/src/App.css
@@ -294,7 +294,30 @@ a {
     margin-top: 10px;
 }
 .collapseLogement {
-    display: flex;
+    width: 86%;
     justify-content: space-between;
+    margin: 0 auto;
+}
+
+.filtresLogement {
+    width: 90%;
+    display: flex;
     flex-direction: row;
+}
+
+.filtresLogement span {
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.différentFiltres {
+    margin-right: 10px;
+    color: white;
+    background-color: #FF6060;
+    border-radius: 10px;
+    width: 50%;
+    height: 25px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
