--- a/src/App.css
+++ b/src/App.css
@@ -283,9 +283,11 @@ a {
 
 .titreLogement {
     font-weight: 700;
-    font-size: 36px;
+    font-size: 33px;
     color: #FF6060;
     margin-bottom: 0;
+    width: 50%;
+    white-space: nowrap;
 }
 
 .localisationLogement {
@@ -300,7 +302,7 @@ a {
 }
 
 .filtresLogement {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
@@ -315,9 +317,34 @@ a {
     color: white;
     background-color: #FF6060;
     border-radius: 10px;
-    width: 50%;
-    height: 25px;
+    width: auto;
+    height: 30px;
     justify-content: center;
     align-items: center;
     display: flex;
+    margin-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
+
+.hostPhoto {
+    border-radius: 50%;
+    width: 85%;
+    position: relative;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+.hostName {
+    position: absolute;
+    right: 240px;
+    top: 530px;
+    color: #FF6060;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.logementRating img {
+    margin-left: 10px;
+}
+
