--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@ footer {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-top: 35px;
+    margin-top: 210px;
+
 }
 .logofooter {
     width: 8%;
@@ -143,6 +144,9 @@ a {
     background-color: #FF6060;
     border-radius: 5px 5px 5px 5px;
     cursor: pointer;
+    max-height: 110px;
+    margin-bottom: 30px;
+
 }
 
 .titleCollapse {
@@ -297,9 +301,38 @@ a {
 }
 .collapseLogement {
     width: 86%;
-    justify-content: space-between;
     margin: 0 auto;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
+.collapseLogement .contentCollapse {
+    padding-top: 10px;
+    background-color: #F5F5F5;
+    border-radius: 5px;
+    padding-bottom: 10px;
+}
+
+.collapseLogement .titleCollapse {
+    margin-top: 0;
+}
+    
+.descriptionLogement, .equipementsLogement {
+    height: 48px;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+}
+
+.equipementsLogement ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+/******* Voir ici pour le content de la collapse */
 
 .filtresLogement {
     width: 100%;
@@ -334,7 +367,7 @@ a {
 
 .hostPhoto {
     border-radius: 50%;
-    width: 32%;
+    width: 33%;
     position: relative;
     margin-top: 20px;
     margin-left: 30px;
@@ -354,7 +387,7 @@ a {
 .logementRating {
     display: flex;
     justify-content: flex-start;
-    margin-top: 20px;
+    margin-top: 25px;
     flex-direction: row-reverse;
     /* Inverse l'ordre d'affichage pour remplir les étoiles de gauche à droite */
 }
