--- a/src/App.css
+++ b/src/App.css
@@ -186,26 +186,30 @@ a {
 /* Page Error */
 
 .containerError {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    align-content: center;
 }
 
 .errorPageTitle {
     color: #FF6060;
-    width: 41%;
+    font-size: 350px;
     font-weight: 700;
-    font-size: 288px;
     margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .textePageError {
     color: #FF6060;
-    width: 65%;
     font-weight: 500;
-    font-size: 36px;
-    margin: 0;
+    font-size: 30px;
+    width: 86%;
+    display: flex;
+    justify-content: center;
 }
 
 .lienHomepage {
@@ -217,6 +221,9 @@ a {
     margin-bottom: 100px;
     text-decoration: underline;
     text-underline-offset: 3px;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -420,6 +427,13 @@ a {
         padding: 0;
         white-space: nowrap;
     }
+    .errorPageTitle {
+        font-size: 110px;
+        margin-top: 70px;
+    }
+    .textePageError {
+        font-size: 25px;
+    }
 }
 
 @media screen and (max-width : 768px) {
@@ -431,6 +445,9 @@ a {
     }
     .bannierecontainer {
         height: 111px;
+    }
+    .textePageError {
+        font-size: 17px;
     }
 }
 
