--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,8 @@ footer {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-top: 210px;
-
 }
+
 .logofooter {
     width: 8%;
     margin: 40px;
@@ -140,7 +139,7 @@ a {
 .containerCollapse {
     width: 71%;
     margin: 0 auto;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .objetsCollapse {
@@ -149,7 +148,6 @@ a {
     cursor: pointer;
     max-height: 110px;
     margin-bottom: 30px;
-
 }
 
 .titleCollapse {
@@ -168,7 +166,7 @@ a {
     font-size: 18px;
     padding-left: 10px;
     margin-top: 0;
-    padding-top: 20px;
+    padding-top: 5px;
 }
 
 .iconeCollapse {
@@ -316,6 +314,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 220px;
 }
 
 .collapseLogement .contentCollapse {
@@ -434,14 +433,14 @@ a {
     .textePageError {
         font-size: 25px;
     }
+    .containerCollapse .descriptionAbout:last-child {
+        margin-bottom: 150px;
+    }
 }
 
 @media screen and (max-width : 768px) {
     .navheader img {
         width: 35%;
-    }
-    .bannierehome {
-        height: 111px;
     }
     .bannierecontainer {
         height: 111px;
@@ -449,5 +448,9 @@ a {
     .textePageError {
         font-size: 17px;
     }
+    .contentCollapse {
+        font-size: 17px;
+    }
 }
+
 
