--- a/src/App.css
+++ b/src/App.css
@@ -311,10 +311,10 @@ a {
 
 .titreLogement {
     font-weight: 700;
-    font-size: 33px;
+    font-size: 28px;
     color: #FF6060;
     margin-bottom: 0;
-    width: 50%;
+    width: 40%;
     white-space: nowrap;
     margin-top: 20px;
 }
@@ -336,7 +336,6 @@ a {
 }
 
 .filtresLogement {
-    width: 100%;
     display: flex;
     flex-direction: row;
 }
@@ -351,7 +350,6 @@ a {
     color: white;
     background-color: #FF6060;
     border-radius: 10px;
-    width: auto;
     height: 30px;
     justify-content: center;
     align-items: center;
@@ -359,6 +357,7 @@ a {
     margin-top: 20px;
     padding-left: 30px;
     padding-right: 30px;
+    white-space: nowrap;
 }
 
 .hostLogement {
@@ -371,7 +370,7 @@ a {
     width: 33%;
     position: relative;
     margin-top: 20px;
-    margin-left: 30px;
+    margin-left: 10px;
 }
 
 .hostName {
@@ -420,6 +419,18 @@ a {
     .textePageError {
         font-size: 25px;
     }
+    .titreLogement {
+        font-size: 18px;
+        white-space: wrap;
+        width: 90%;
+    }
+    .filtresLogement span {
+        font-size: 12px;
+    }
+    .filtresLogement {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 @media screen and (max-width : 768px) {
@@ -438,6 +449,29 @@ a {
     }
     .containerCardLogements {
         background-color: white;
+    }
+    .infosLogement {
+        flex-direction: column;
+    }
+    .infosDroite {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+    .hostName {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 50px;
+    }
+    .collapseLogement {
+        flex-direction: column;
+        margin-top: 20px;
+    }
+    .filtresLogement span {
+        font-size: 10px;
+    }
+    .différentFiltres {
+        width: 30%;
     }
 }
 
